0.2.0:

2007-10-16  Murray Cumming  <murrayc@murrayc.com>

	* examples/: Renamed .hh files to .h, for consistency 
	with other *mm libraries.

2007-10-16  Murray Cumming  <murrayc@murrayc.com>

	* Renamed the directories (and installed 
	header locations) to goocanvasmm from libgoocanvasmm, 
	to be consisten with other *mm libraries.

2007-10-16  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* libgoocanvas/Makefile.am:
	* libgoocanvas/goocanvasmm-1.0.pc.in:
	* libgoocanvas/libgoocanvasmm-1.0.pc.in:
	Change the package name from libgoocanvasmm to 
	goocanvasmm, and the pkg-config name from 
	libgoocanvasmm-1.0 to goocanvasmm-1.0, to be 
	consistent with other *mm libraries.
	* examples/demo/Makefile.am:
	* examples/moving_shapes/Makefile.am:
	* examples/simple/Makefile.am: Dist the headers, 
	to fix distcheck.

2007-10-15  Murray Cumming  <murrayc@murrayc.com>

	* libgoocanvas/src/polyline.ccg:
	* libgoocanvas/src/polyline.hg:
	* libgoocanvas/src/polylinemodel.ccg:
	* libgoocanvas/src/polylinemodel.hg:
	* libgoocanvas/src/text.ccg:
	* libgoocanvas/src/text.hg: Correct the constructors, 
	to only use real properties.
	* examples/demo/primitives.cc: Fixed a crash 
	caused by adding items to themselves, caused by 
	me.

2007-10-15  Murray Cumming  <murrayc@murrayc.com>

	* most files: Changed the whitespace to match 
	gtkmm and friends.

2007-10-15  Murray Cumming  <murrayc@murrayc.com>

	* examples/coordinates/window.cc:
	* examples/demo/primitives.cc:
	* examples/moving_shapes/window.cc:
	* examples/simple/window.cc:
	* libgoocanvas/src/ellipse.ccg:
	* libgoocanvas/src/ellipse.hg:
	* libgoocanvas/src/ellipsemodel.ccg:
	* libgoocanvas/src/ellipsemodel.hg:
	* libgoocanvas/src/group.ccg:
	* libgoocanvas/src/group.hg:
	* libgoocanvas/src/groupmodel.ccg:
	* libgoocanvas/src/groupmodel.hg:
	* libgoocanvas/src/image.ccg:
	* libgoocanvas/src/image.hg:
	* libgoocanvas/src/imagemodel.ccg:
	* libgoocanvas/src/imagemodel.hg:
	* libgoocanvas/src/itemmodel.ccg: