@@ -1,4 +1,4 @@
-SUBDIRS = simple moving_shapes demo coordinates
+SUBDIRS = simple moving_shapes demo coordinates text
 
 #EXTRA_DIST	=  Makefile.am_fragment README.txt
 
