@@ -1,0 +1,5 @@
+include $(top_srcdir)/examples/Makefile.am_fragment
+
+noinst_PROGRAMS = example
+example_SOURCES = main.cc window.cc window.h
+
