@@ -1,0 +1,31 @@
+/* example Copyright (C) 2007 goocanvasmm development team
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License version 2
+ * as published by the Free Software Foundation.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+ */
+
+#include <gtkmm.h>
+#include "window.h"
+
+int main(int argc, char* argv[])
+{
+  Gtk::Main app(&argc, &argv) ;
+  Goocanvas::init("example", "0.1", argc, argv) ;
+
+  ExampleWindow win;
+  Gtk::Main::run(win) ;
+
+  return 0;
+}
+
+
