@@ -20,11 +20,15 @@
 
 ExampleWindow::ExampleWindow()
 : m_box(false, 6),
-  m_button_box(false, 6),
+  m_button_box1(false, 6),
+  m_button_box2(false, 6),
   m_label_origin("origin (0, 0)"),
   m_button_translate("translate(20, 20)"),
   m_button_setxy("set x=50,y=50)"),
-  m_button_scale("scale(1.2, 1.2)")
+  m_button_scale("scale(1.2, 1.2)"),
+  m_button_zoom("scale (zoom) canvas"),
+  m_button_set_width("set width=40"),
+  m_button_set_width_unlimited("set width=-1 (unlimited)")
 {
   set_title("goocanvasmm Example");
 
@@ -35,27 +39,38 @@ ExampleWindow::ExampleWindow()
   m_canvas.set_bounds(0, 0, 1000, 1000);
 
   Glib::RefPtr<Goocanvas::Item> root = m_canvas.get_root_item();
-  m_rect = Goocanvas::Rect::create(10, 10, 60, 60);
-  root->add_child(m_rect);
-  m_rect->property_line_width().set_value(10.0);
-  m_rect->property_stroke_color().set_value("yellow");
-  m_rect->property_fill_color().set_value("gray");
+  m_text = Goocanvas::Text::create("some text");
+  root->add_child(m_text);
+  m_text->property_line_width().set_value(10.0);
+  m_text->property_stroke_color().set_value("yellow");
+  m_text->property_fill_color().set_value("gray");
 
 
   Gtk::ScrolledWindow* sw = Gtk::manage(new Gtk::ScrolledWindow());
   sw->add(m_canvas);
   m_box.pack_start(*sw);
 
-  m_box.pack_start(m_button_box, Gtk::PACK_SHRINK);
+  m_box.pack_start(m_button_box1, Gtk::PACK_SHRINK);
   
-  m_button_box.pack_start(m_button_translate, Gtk::PACK_SHRINK);
+  m_button_box1.pack_start(m_button_translate, Gtk::PACK_SHRINK);
   m_button_translate.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_translate));
 
-  m_button_box.pack_start(m_button_setxy, Gtk::PACK_SHRINK);
+  m_button_box1.pack_start(m_button_setxy, Gtk::PACK_SHRINK);
   m_button_setxy.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_setxy));
 
-  m_button_box.pack_start(m_button_scale, Gtk::PACK_SHRINK);
+  m_button_box1.pack_start(m_button_scale, Gtk::PACK_SHRINK);
   m_button_scale.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_scale));
+
+  m_button_box1.pack_start(m_button_zoom, Gtk::PACK_SHRINK);
+  m_button_zoom.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_zoom_canvas));
+
+  m_box.pack_start(m_button_box2, Gtk::PACK_SHRINK);
+  
+  m_button_box2.pack_start(m_button_set_width, Gtk::PACK_SHRINK);
+  m_button_set_width.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_set_width));
+
+  m_button_box2.pack_start(m_button_set_width_unlimited, Gtk::PACK_SHRINK);
+  m_button_set_width_unlimited.signal_clicked().connect(sigc::mem_fun(*this, &ExampleWindow::on_button_set_width_unlimited));
 
   m_box.pack_start(m_label_status, Gtk::PACK_SHRINK);
   m_label_status.set_alignment(0.0, 0.5);
@@ -70,11 +85,11 @@ ExampleWindow::ExampleWindow()
 void ExampleWindow::update_label()
 {
   std::stringstream str;
-  str << "Rect: x=" << m_rect->property_x() << ", y=" << m_rect->property_y() << 
-         ", width=" << m_rect->property_width() << ",  height=" << m_rect->property_height() << 
-         ", line_width=" << m_rect->property_line_width() << std::endl;
+  str << "Rect: x=" << m_text->property_x() << ", y=" << m_text->property_y() << 
+         ", width=" << m_text->property_width() << //",  height=" << m_text->property_height() << 
+         ", line_width=" << m_text->property_line_width() << std::endl;
 
-  Goocanvas::Bounds bounds = m_rect->get_bounds();
+  Goocanvas::Bounds bounds = m_text->get_bounds();
   str << "Item bounds: x1=" << bounds.get_x1() << ", y1=" << bounds.get_y1() << ", x2=" << bounds.get_x2() << ", y2=" << bounds.get_y2() << std::endl;
 
   
@@ -84,23 +99,43 @@ void ExampleWindow::update_label()
 
 void ExampleWindow::on_button_translate()
 {
-  m_rect->translate(20, 20);
+  m_text->translate(20, 20);
   update_label();
 }
 
 void ExampleWindow::on_button_setxy()
 {
-  m_rect->property_x() = 50;
-  m_rect->property_y() = 50;
+  m_text->property_x() = 50;
+  m_text->property_y() = 50;
   update_label();
 }
-
 
 void ExampleWindow::on_button_scale()
 {
-  m_rect->scale(1.2, 1.2);
+  m_text->scale(1.2, 1.2);
   update_label();
 }
+
+void ExampleWindow::on_button_zoom_canvas()
+{
+  m_canvas.set_scale(m_canvas.get_scale() + 0.1);
+  update_label();
+}
+
+void ExampleWindow::on_button_set_width()
+{
+  m_text->property_width() = 40;
+  update_label();
+}
+
+void ExampleWindow::on_button_set_width_unlimited()
+{
+  m_text->property_width() = -1;
+  update_label();
+}
+
+
+
 
 
 
