@@ -56,22 +56,35 @@ public:
   _WRAP_PROPERTY("description", Glib::ustring)
   _WRAP_PROPERTY("pointer-events", PointerEvents)
   _WRAP_PROPERTY("transform", Cairo::Matrix*)
+
   _WRAP_PROPERTY("stroke-pattern", Cairo::RefPtr<Cairo::Pattern>)
   _WRAP_PROPERTY("fill-pattern", Cairo::RefPtr<Cairo::Pattern>)
   _WRAP_PROPERTY("fill-rule", Cairo::FillRule)
   _WRAP_PROPERTY("operator", Cairo::Operator)
   _WRAP_PROPERTY("antialias", Cairo::Antialias)
+
+  _WRAP_PROPERTY("font", Glib::ustring)
+  _WRAP_PROPERTY("font-desc", Pango::FontDescription)
+  _WRAP_PROPERTY("hint-metrics", Cairo::HintMetrics)
+
   _WRAP_PROPERTY("line-width", double)
   _WRAP_PROPERTY("line-cap", Cairo::LineCap)
   _WRAP_PROPERTY("line-join", Cairo::LineJoin)
   _WRAP_PROPERTY("line-join-miter-limit", double)
   _WRAP_PROPERTY("line-dash", LineDash)
+
   _WRAP_PROPERTY("stroke-color", Glib::ustring)
   _WRAP_PROPERTY("stroke-color-rgba", guint)
   _WRAP_PROPERTY("stroke-pixbuf", Gdk::Pixbuf)
   _WRAP_PROPERTY("fill-color", Glib::ustring)
   _WRAP_PROPERTY("fill-color-rgba", guint)
   _WRAP_PROPERTY("fill-pixbuf", Gdk::Pixbuf)
+
+  _WRAP_PROPERTY("parent", Glib::RefPtr<Item>)
+  _WRAP_PROPERTY("can-focus", bool)
+  _WRAP_PROPERTY("clip-path", Glib::ustring)
+  _WRAP_PROPERTY("clip-path-fill-rule", Cairo::FillRule)
 };
 
-}
+} //namespace Goocanvas
+
